# bootloader_tutorial

./: .gitignore  .travis.yml  Makefile  Makefile.in  README.md  autogen.sh  configure.ac  run.sh  stage1.asm  stage1_5.asm
doc/: Makefile.in  index.md
doc/dev/: build_system.md  project_structure.md
installer/: Makefile  boot_install.c  boot_read.c
src/: Makefile.in
src/boot/: Makefile.in
src/kernel/: main.c
src/kernel/boot/: Makefile.in
src/kernel/boot/i386/: Makefile.in  stage1.s  stage1_5.s
src/utils/: Makefile.in  README  boot_install.c  boot_read.c  install_bootloader.c  set_boot.c
utils/: Makefile  boot_install.c  boot_read.c
